--- a/hack2-submissions-req.html
+++ b/hack2-submissions-req.html
@@ -706,13 +706,14 @@
     <header class="header">
         <div class="container header-container">
             <div class="breadcrumbs">
-                <a href="index.html" class="breadcrumb-link">Home</a>
+                <a href="https://codecrunchglobal.vercel.app" class="breadcrumb-link">Home</a>
                 <span class="breadcrumb-separator">/</span>
                 <a href="hackathons.html" class="breadcrumb-link">Hackathons</a>
                 <span class="breadcrumb-separator">/</span>
-                <a href="hackathons.html" class="breadcrumb-link">Hacks Toolkit</a>
-                <span class="breadcrumb-separator">/</span>
-                <span>Submission Requirements</span>
+                <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" class="breadcrumb-link">Hacks Toolkit</a>
+
+                <span class="breadcrumb-separator">/</span> <a href="https://codecrunchglobal.vercel.app/hack2-submissions-req.html#submission-requirements" class="breadcrumb-link">Submission Requirements</a>
+                
             </div>
             <h1 class="header-title">Hackathon Submission Requirements</h1>
             <p class="header-subtitle">Complete these requirements to properly submit your project for judging. Make sure to follow all guidelines to avoid disqualification.</p>
@@ -729,7 +730,7 @@
 
 
 
-            <section class="card">
+            <section class="card" id="submission-requirements">
   <h2 class="card-title">How to Submit</h2>
   <p class="card-description">
     Follow these steps carefully to submit your project for judging and verify the checklist before the deadline.
