--- a/hackuniversity-onestopform-1.html
+++ b/hackuniversity-onestopform-1.html
@@ -47,7 +47,7 @@
           <div class="w-16 h-16 cc-blue rounded-lg mx-auto mb-4 flex items-center justify-center">
             <i class="fas fa-certificate text-2xl text-white" aria-hidden="true"></i>
           </div>
-          <h3 class="text-2xl font-bold cc-blue-text mb-3">Existing Members & Hackathon Participants</h3>
+          <h3 class="text-2xl font-bold cc-blue-text mb-3">Existing Organization Members & Hackathon Participants</h3>
         <p class="text-blue-700 mb-4">Get your Membership certificates and community platforms instantly</p>
         </div>
 
