--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -169,55 +169,87 @@
 
    <!-- CTA Buttons -->
 <div class="cta-section flex flex-col lg:flex-row gap-6 lg:gap-8 justify-center items-stretch lg:items-start mb-12 md:mb-16">
-    <!-- For Students Section -->
-    <div class="text-center flex-1 max-w-xs mx-auto lg:max-w-none">
-        <h3 class="text-xl md:text-2xl font-bold text-white mb-3 md:mb-4">For Students</h3>
+   <!-- For Students Section -->
+<div class="text-center flex-1 max-w-xs mx-auto lg:max-w-none">
+  <h3 class="text-xl md:text-2xl font-bold text-white mb-3 md:mb-4">For Students</h3>
 
-        <!-- Short Description -->
-        <p class="text-white/90 text-sm md:text-base mb-4 leading-relaxed">
-            Do it all with Hack University OneStop Form: Membership, Register to Hacks, Volunteer, or Apply to the EBoard - One form to access all Hack University orgs!
-        </p>
+  <p class="text-white/90 text-sm md:text-base mb-4 leading-relaxed">
+    Use the OneStop form to join, register for hackathons, volunteer, or apply for E-Board—everything in one place.
+  </p>
 
-        <div class="flex flex-col gap-3 space-y-2">
-            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
-               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Membership <br>[ Google Developer Group at FIU x Code Crunch Worldwide x ColorStack at FIU x CAHSI at FIU x Raspberry Pi Code Crunch ] <br> Ages 13+ 
-            </a>
+  <div class="flex flex-col gap-3 space-y-2">
+    <!-- Membership -->
+    <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Join membership for GDG at FIU, Code Crunch Worldwide, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch. Ages 13 and up.">
+      Join Membership
+      <span class="block text-xs opacity-90 mt-1">
+        GDG @ FIU · Code Crunch · ColorStack · CAHSI · Raspberry Pi Code Crunch• Ages 13+
+      </span>
+    </a>
 
-            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
-               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Discord <br>[ Google Developer Group at FIU x Code Crunch Worldwide x ColorStack at FIU x CAHSI at FIU x Raspberry Pi Code Crunch ] <br> Ages 13+ 
-            </a>
+    <!-- Discord -->
+    <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Get Discord access for GDG at FIU, Code Crunch Worldwide, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch. Ages 13 and up.">
+      Join Discord
+      <span class="block text-xs opacity-90 mt-1">
+        All org servers • Ages 13+
+      </span>
+    </a>
 
-            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
-               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Discord <br>[ Google Developer Group at FIU x Code Crunch Worldwide x ColorStack at FIU x CAHSI at FIU x Raspberry Pi Code Crunch ] <br> Ages 13+ 
-            </a>
+    <!-- Certificates -->
+    <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Request official membership certificates as PDF for LinkedIn and resumes.">
+      Get Membership Certificates
+      <span class="block text-xs opacity-90 mt-1">
+        Official PDF for LinkedIn & resumes
+      </span>
+    </a>
 
-            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
-               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Membership certificates  <!--  <br><br>  -->
-            </a>
-            <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank" 
-               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Hackathons Registration <br> Ages 16+ 
-            </a>
+    <!-- Hackathons -->
+    <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Register for upcoming hackathons. Ages 16 and up.">
+      Register for Hackathons
+      <span class="block text-xs opacity-90 mt-1">
+        Upcoming events • Ages 16+
+      </span>
+    </a>
 
-            <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank" 
-               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                HACKER GUIDE 
-            </a>
+    <!-- Hacker Guide -->
+    <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Open the Hacker Guide with rules, submission requirements, and resources.">
+      Open Hacker Guide
+      <span class="block text-xs opacity-90 mt-1">
+        Rules • Submissions • Resources
+      </span>
+    </a>
 
-            <a href="https://infoflyers.vercel.app" target="_blank" 
-               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Hack University Wiki <br>[Events and Resources Links] <br> Students 13+ 
-            </a>
-            <a href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank" 
-               class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden">
-                Hack University Calendar <br> Students 13+ 
-            </a>
-        </div>
-    </div>
+    <!-- Wiki -->
+    <a href="https://infoflyers.vercel.app" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Browse the Hack University Wiki with event links and resources. For students 13 and up.">
+      Browse Wiki
+      <span class="block text-xs opacity-90 mt-1">
+        Events & Resources • Ages 13+
+      </span>
+    </a>
+
+    <!-- Calendar -->
+    <a href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="View the Hack University calendar for all upcoming events. For students 13 and up.">
+      View Calendar
+      <span class="block text-xs opacity-90 mt-1">
+        All upcoming dates • Ages 13+
+      </span>
+    </a>
+  </div>
+</div>
+
                 
 
 
