--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -186,7 +186,7 @@
     <!-- Quick links: Discord / GroupMe / Luma / Google Calendar -->
     <nav class="quick-links" aria-label="Quick links">
       <!-- TODO: Replace # with your real Discord invite -->
-      <a class="ql-btn ql-discord" href="#" target="_blank" rel="noopener">
+      <a class="ql-btn ql-discord" href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform-1" target="_blank" rel="noopener">
         <i class="fa-brands fa-discord"></i><span>Discord</span>
       </a>
 
