--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -257,7 +257,7 @@
       <h3>🎯 What this OneStop form does</h3>
       <div class="features">
         <div class="feature-item">• Join all 5 Hack University orgs in one step</div>
-        <div class="feature-item">• Register for upcoming hackathons (7 per year)</div>
+        <div class="feature-item">• Register for upcoming hackathons (12 or more per year)</div>
         <div class="feature-item">• Get official membership certificates (PDF)</div>
         <div class="feature-item">• Become eligible for E-Board and volunteer roles</div>
       </div>
