--- a/hackuniversity-onestopform.html
+++ b/hackuniversity-onestopform.html
@@ -203,21 +203,21 @@
     <nav class="quick-links" aria-label="Quick links">
       <!-- TODO: Replace # with your real Discord invite -->
       <a class="ql-btn ql-discord" href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform-1.html" target="_blank" rel="noopener">
-        <i class="fa-brands fa-discord"></i><span>Discord</span>
+        <i class="fa-brands fa-discord"></i><span>Discord [Only for Members]</span>
       </a>
 
       <!-- Instagram -->
       <a class="ql-btn ql-instagram"
-        href="https://instagram.com/hackuniversity"  
+        href="https://hackuniversityplatforms.vercel.app/"  
         target="_blank" rel="noopener"
         aria-label="Join our Instagram">
-        <i class="fa-brands fa-instagram"></i><span>Instagram</span>
+        <i class="fa-brands fa-instagram"></i><span>Join Instagram Group Chat</span>
       </a>
 
 
       <!-- TODO: Replace # with your real GroupMe link -->
       <a class="ql-btn ql-groupme" href="#" target="_blank" rel="noopener">
-        <i class="fa-solid fa-message"></i><span>GroupMe</span>
+        <i class="fa-solid fa-message"></i><span>Join GroupMe Group Chat</span>
       </a>
 
       <a class="ql-btn ql-luma" href="http://hackuniversity-calendar.vercel.app/" target="_blank" rel="noopener">
