--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -198,6 +198,37 @@
       </span>
     </a>
 
+        <!-- GroupMe Group Chat-->
+    <a href="https://hackuniversityplatforms.vercel.app/" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Get Discord access for GDG at FIU, Code Crunch Worldwide, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch. Ages 13 and up.">
+      Join GroupMe Group Chat
+      <span class="block text-xs opacity-90 mt-1">
+        <!-- All org servers • Ages 13+ -->
+      </span>
+    </a>
+
+    <!-- IG Group Chat-->
+    <a href="https://hackuniversityplatforms.vercel.app/" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Get Discord access for GDG at FIU, Code Crunch Worldwide, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch. Ages 13 and up.">
+      Join IG Group Chat
+      <span class="block text-xs opacity-90 mt-1">
+        <!-- All org servers • Ages 13+ -->
+      </span>
+    </a>
+
+    <!-- Calendar -->
+    <a href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="View the Hack University calendar for all upcoming events. For students 13 and up.">
+      View Calendar
+      <span class="block text-xs opacity-90 mt-1">
+        All upcoming dates • Ages 13+
+      </span>
+    </a>
+
+
     <!-- Certificates -->
     <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank"
        class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
@@ -238,15 +269,7 @@
       </span>
     </a>
 
-    <!-- Calendar -->
-    <a href="https://codecrunchglobal.vercel.app/hackuniversity-calendar.html" target="_blank"
-       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
-       aria-label="View the Hack University calendar for all upcoming events. For students 13 and up.">
-      View Calendar
-      <span class="block text-xs opacity-90 mt-1">
-        All upcoming dates • Ages 13+
-      </span>
-    </a>
+
   </div>
 </div>
 
