--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -375,7 +375,7 @@
                             <img src="https://github.com/user-attachments/assets/5e2a6622-9702-438f-bb6b-25d8e894839e" 
                                 alt="Code Crunch Global Logo" class="partner-logo h-12 md:h-16 w-auto object-contain" loading="lazy">
                         </div>
-                        <h3 class="text-lg md:text-xl font-bold mb-1 md:mb-2">Code Crunch Global</h3>
+                        <h3 class="text-lg md:text-xl font-bold mb-1 md:mb-2">Code Crunch Worldwide</h3>
                         <p class="text-white/80 text-sm">Global coding community</p>
                     </a>
 
