--- a/hackuniversity-onestopform-1.html
+++ b/hackuniversity-onestopform-1.html
@@ -203,7 +203,7 @@
           class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
         >
           <i class="fab fa-discord text-xl" aria-hidden="true"></i>
-          Join Code Crunch & Hackathon Discord 
+          Join Hack University Hackathon Discord 
         </a>
         <a
           id="cert-groupme-link"
@@ -213,7 +213,7 @@
           class="bg-green-600 hover:bg-orange-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
         >
           <i class="fas fa-users text-xl" aria-hidden="true"></i>
-          Join Code Crunch & Hackathon GroupMe
+          Join Hack University Hackathon GroupMe
         </a>
       </div>
 
@@ -221,6 +221,31 @@
       <div class="bg-white rounded-lg p-6 border border-green-200 mb-6">
         <h4 class="text-xl font-bold text-gray-800 mb-4 text-center">🌐 Join Organization-Specific Communities</h4>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-3">
+          <!-- ColorStack at FIU -->
+          <div class="text-center">
+            <h5 class="font-semibold text-gray-700 mb-2 text-sm">Code Crunch Worldwide</h5>
+            <div class="flex gap-2 justify-center">
+              <a
+                href="https://codecrunchglobal-discordserver.vercel.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="bg-purple-600 hover:bg-purple-700 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
+              >
+                <i class="fab fa-discord text-sm" aria-hidden="true"></i>Discord
+              </a>
+              <a
+                href="https://hackuniversitygroupme.vercel.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-2 rounded-md font-medium text-sm transition-colors flex items-center gap-1"
+              >
+                <i class="fas fa-users text-sm" aria-hidden="true"></i>GroupMe
+              </a>
+            </div>
+          </div>
+
+
+
           <!-- ColorStack at FIU -->
           <div class="text-center">
             <h5 class="font-semibold text-gray-700 mb-2 text-sm">ColorStack at FIU</h5>
