--- a/hackuniversity-onestopform-1.html
+++ b/hackuniversity-onestopform-1.html
@@ -203,7 +203,7 @@
           class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
         >
           <i class="fab fa-discord text-xl" aria-hidden="true"></i>
-          Join Hack University Hackathon Discord 
+          Join Hack University <br>Hackathon Discord 
         </a>
         <a
           id="cert-groupme-link"
@@ -213,7 +213,7 @@
           class="bg-green-600 hover:bg-orange-600 text-white px-6 py-4 rounded-lg font-bold text-lg transition-all duration-300 transform hover:-translate-y-1 hover:shadow-lg flex items-center justify-center gap-3 text-decoration-none"
         >
           <i class="fas fa-users text-xl" aria-hidden="true"></i>
-          Join Hack University Hackathon GroupMe
+          Join Hack University <br>Hackathon GroupMe
         </a>
       </div>
 
