--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -188,17 +188,18 @@
     
         <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-305-fall2025.html">
           <span>🏆 305 Hackathon Edition — Fall 2025</span>
-          <small>Open certificate portal - Comming Soon</small>
+          <small>Open certificate portal</small>
         </a>
 
         <a class="portal-btn" href="#">
           <span>💪 EmpowHer Hack — Fall 2025</span>
-          <small>Open certificate portal- Comming Soon</small>
+          <!-- <small>Open certificate portal- Comming Soon</small> -->
+           <small>Open certificate portal soon - We are preparing it for you</small>
         </a>
 
         <a class="portal-btn" href="#">
           <span>⚡ EmpowHer Mini HackDay — Fall 2025</span>
-          <small>Open certificate portal</small>
+          <small>Open certificate portal soon - We are preparing it for you</small>
         </a>
       </div>
 
