--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -176,7 +176,32 @@
       </div>
     </section>
 
-    
+    <!-- Resources (locked until verified) -->
+    <section class="resources" id="resources">
+      <h2>Volunteer Resources</h2>
+      <div class="grid">
+        <div class="res-card res-locked" id="card-cert">
+          <h3><i class="fa-solid fa-certificate"></i> Certificates <span class="lock">🔒</span></h3>
+          <p>Access or verify volunteer participation certificates.</p>
+          <a href="#" id="link-cert" target="_blank" rel="noopener" aria-disabled="true">Open</a>
+        </div>
+        <div class="res-card res-locked" id="card-expo">
+          <h3><i class="fa-solid fa-file-lines"></i> Event Registration Forms <span class="lock">🔒</span></h3>
+          <p>Hack and event registration forms.</p>
+          <a href="#" id="link-expo" target="_blank" rel="noopener" aria-disabled="true">Open</a>
+        </div>
+        <div class="res-card res-locked" id="card-resp">
+          <h3><i class="fa-solid fa-table-list"></i> Event Registration Response Sheet <span class="lock">🔒</span></h3>
+          <p>Review registration responses compiled from the event form.</p>
+          <a href="#" id="link-resp" target="_blank" rel="noopener" aria-disabled="true">Open</a>
+        </div>
+        <div class="res-card res-locked" id="card-eval">
+          <h3><i class="fa-solid fa-clipboard-check"></i> Hackathon Evaluation <span class="lock">🔒</span></h3>
+          <p>Judging evaluation forms (access granted only to volunteers registered by each event).</p>
+          <a href="#" id="link-eval" target="_blank" rel="noopener" aria-disabled="true">Open</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- FOOTER (Hack University) -->
