--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -180,7 +180,7 @@
     </section>
 
     <!-- Resources (locked until verified) -->
-    <section class="resources" id="resources">
+    <!-- <section class="resources" id="resources">
       <h2>Volunteer Resources</h2>
       <div class="grid">
         <div class="res-card res-locked" id="card-cert">
@@ -204,7 +204,7 @@
           <a href="#" id="link-eval" target="_blank" rel="noopener" aria-disabled="true">Open</a>
         </div>
       </div>
-    </section>
+    </section> -->
   </main>
 
   <!-- FOOTER (Hack University) -->
