--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -170,10 +170,10 @@
           • Link to join the official Discord server<br/>
           • Steps to access the private volunteer channel<br/>
           • Direct link to verify access to the private volunteer channel (all communications and updates are handled here)<br/>
-          • Event registration forms (all volunteers)<br/>
+          <!-- • Event registration forms (all volunteers)<br/>
           • Event registration response sheet (all volunteers)<br/>
           • Hackathon judge evaluation forms (access available only to registered volunteers)<br/>
-          • Volunteer certificates page (all volunteers — certificates are issued only to those who complete their volunteering duties)
+          • Volunteer certificates page (all volunteers — certificates are issued only to those who complete their volunteering duties) -->
         </div>
         Awaiting email…
       </div>
