--- a/hackathonvolunteer-login.html
+++ b/hackathonvolunteer-login.html
@@ -170,17 +170,17 @@
           • Link to join the official Discord server<br/>
           • Steps to access the private volunteer channel<br/>
           • Direct link to verify access to the private volunteer channel (all communications and updates are handled here)<br/>
-          <!-- • Event registration forms (all volunteers)<br/>
+          • Event registration forms (all volunteers)<br/>
           • Event registration response sheet (all volunteers)<br/>
           • Hackathon judge evaluation forms (access available only to registered volunteers)<br/>
-          • Volunteer certificates page (all volunteers — certificates are issued only to those who complete their volunteering duties) -->
+          • Volunteer certificates page (all volunteers — certificates are issued only to those who complete their volunteering duties)
         </div>
         Awaiting email…
       </div>
     </section>
 
     <!-- Resources (locked until verified) -->
-    <!-- <section class="resources" id="resources">
+    <section class="resources" id="resources">
       <h2>Volunteer Resources</h2>
       <div class="grid">
         <div class="res-card res-locked" id="card-cert">
@@ -204,7 +204,7 @@
           <a href="#" id="link-eval" target="_blank" rel="noopener" aria-disabled="true">Open</a>
         </div>
       </div>
-    </section> -->
+    </section>
   </main>
 
   <!-- FOOTER (Hack University) -->
