--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -224,7 +224,7 @@
   <p>Support the monthly hackathon and register as a volunteer supporter.</p>
   <p><strong>Donors with dual roles</strong> (Judge + Mentor)</p>
   <!-- TODO: Replace with your live Donations & Registration form URL -->
-  <a class="card-button" href="#" target="_blank" rel="noopener">
+  <a class="card-button" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-form2.html" target="_blank" rel="noopener">
     Open Forms no2
   </a>
   
@@ -250,7 +250,7 @@
         <h3>Form No. 3 — Hackathon Evaluation Form Forms </h3>
         <p><strong>Donors with dual roles</strong> (Judge + Mentor)</p>
         <!-- TODO: Replace with your live Donations & Registration form URL -->
-        <a class="card-button" href="#" target="_blank" rel="noopener">
+        <a class="card-button" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-form3.html" target="_blank" rel="noopener">
           Open Forms no3 
         </a>
         <div class="small-note">
